hphp/hack/test/typecheck/abstract_typeconsts/multiple-definitions/trait_use_use.php.exp
ERROR: File "trait_use_use.php", line 26, characters 7-9:
Some members in class `Tr4` are incompatible with those declared in type `Tr2` (Typing[4340])
  File "trait_use_use.php", line 26, characters 7-9:
  Some members in class `Tr4` are incompatible with those declared in type `Tr2`
  File "trait_use_use.php", line 10, characters 23-24:
  The constraint on this type constant is inconsistent with its parent
  File "trait_use_use.php", line 14, characters 29-39:
  Expected `UpperBound2`
  File "trait_use_use.php", line 10, characters 29-39:
  But got `UpperBound1`
  File "trait_use_use.php", line 10, characters 23-24:
  This declaration was inherited from an object of type `Tr1`. Redeclare this member in `Tr4` with a compatible signature.
ERROR: File "trait_use_use.php", line 28, characters 28-39:
Invalid type hint (Typing[4090])
  File "trait_use_use.php", line 28, characters 38-39:
  No type constant `T2` in `UpperBound1`
  File "trait_use_use.php", line 3, characters 11-21:
  Declaration of `UpperBound1` is here
